# LuisaComputeQtSample

./: .clang-format  .clangd  .env.template  .gitignore  CMakeLists.txt  README.md  setup.lua  xmake.lua
app/: CMakeLists.txt  main.cpp  rhiwindow.cpp  rhiwindow.h  rhiwindow.qrc  xmake.lua
src/: CMakeLists.txt  dummyrt.cpp  dummyrt.h  path_tracing_camera.cpp  pt_rt.cpp  pt_rt.h  xmake.lua
src/base/: device_config.h  dx_device_config.cpp  dx_device_config.h  vk_device_config.cpp  vk_device_config.h
